--- a/src/styles/Candidatos.css
+++ b/src/styles/Candidatos.css
@@ -1,7 +1,7 @@
 
 
 .candidatos-container {
-    background-image: url('/public/img/background.jpg');
+    background-image: url('/public/img/background2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
