--- a/src/styles/Candidatos.css
+++ b/src/styles/Candidatos.css
@@ -1,6 +1,4 @@
-
-
-.candidatos-container {
+body {
     background-image: url('/public/img/background2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,6 +6,10 @@
     background-position: center;
     background-color: #f0f0f0;
     background-position: 30%;
+
+}
+
+.candidatos-container {
     width: 100%;
     height: 100vh;
 }
