--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,6 +15,19 @@ body, html {
   background: url('/public/img/moça.png') no-repeat center center/cover;
 }
 
+.form-container {
+  filter: blur(12px);
+  pointer-events: none;
+}
+
+#selecao {
+  position: absolute;
+  color: #ffffff;
+  z-index: 2;
+  font-size: 3rem;
+  font-family: 'Ruberoid-bold', sans-serif;
+}
+
 /* Content */
 .content {
   display: flex;
