--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -142,6 +142,7 @@ body, html {
 
 .vaga-options {
   width: 100%;
+  gap: 3rem;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -149,7 +150,7 @@ body, html {
 
 .vaga-options label {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 8px;
 }
 
